--- a/client/index.html
+++ b/client/index.html
@@ -12,6 +12,7 @@
         type="text"
         placeholder="upload image..."
         class="image-upload-input"
+        readonly
       />
       <svg
         xmlns="http://www.w3.org/2000/svg"
@@ -19,12 +20,18 @@
         height="24"
         fill="currentColor"
         class="image-upload-icon bi bi-paperclip"
+        onclick="openFileInput()"
         viewBox="0 0 15 15"
       >
         <path
           d="M4.5 3a2.5 2.5 0 0 1 5 0v9a1.5 1.5 0 0 1-3 0V5a.5.5 0 0 1 1 0v7a.5.5 0 0 0 1 0V3a1.5 1.5 0 1 0-3 0v9a2.5 2.5 0 0 0 5 0V5a.5.5 0 0 1 1 0v7a3.5 3.5 0 1 1-7 0V3z"
         />
       </svg>
+    </div>
+
+    <div class="preview-image" id="preview-image">
+      <p>Preview of the image you selected</p>
+      <img class="image-preview" src="" alt="" />
     </div>
     <script src="main.js"></script>
   </body>
