added backend code for image uploader

--- a/client/index.html
+++ b/client/index.html
@@ -33,6 +33,7 @@
         height="24"
         fill="currentColor"
         class="image-cloud-upload-icon bi bi-cloud-upload"
+        onclick="handleImageUpload()"
         viewBox="0 0 16 16"
       >
         <path
@@ -50,6 +51,7 @@
       <p>Preview of the image you selected</p>
       <img class="image-preview" src="" alt="" />
     </div>
+
     <script src="main.js"></script>
   </body>
 </html>
